--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "10.4.7",
     "@testing-library/user-event": "12.0.11",
     "react": "^16.13.1",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "use-sound": "^4.0.1"
   },
   "scripts": {
     "build": "react-scripts build",
